--- a/index.html
+++ b/index.html
@@ -13,16 +13,85 @@
   <body>
     <div class="grid-container">
       <div class="row principal">
-        <div class="column small-4 medium-4 large-4 text-right">
-          <h2>Gastronomía</h2>
-          <p>El amor entra por la barriga</p>
-
-        </div>
-        <div class="column small-8 medium-8 large-8">
-          <div class="callout">
-
+        <div class="column small-4 medium-4 large-4">
+          <div class="logo text-right">
+            <h2>Gastronomía</h2>
+            <p>El amor entra por la barriga</p>
           </div>
         </div>
+        <div class="column small-8 medium-8 large-8 right-section">
+
+        </div>
+
+          <div class="row">
+            <div class="column small-4 medium-4 large-4">
+              <div class="callout left-section">
+                <div class="top-bar-right">
+                  <ul class="menu">
+                    <li><input class="buscador" type="search" placeholder="Buscar"></li>
+                    <li><button type="button" class="button"><i class="fi-magnifying-glass"></i></button></li>
+                  </ul>
+                </div>
+
+                  <ul class="menu vertical">
+                      <li><a class="button expanded" href="#0">INICIO</a></li>
+                      <li><a class="button expanded" href="#0">MI PLATO PERFECTO</a></li>
+                      <li><a class="button expanded" href="#0">RECETAS</a></li>
+                      <li><a class="button expanded" href="#0">FAVORITOS</a></li>
+                  </ul>
+
+
+                <div class="row miniaturas">
+                  <div class="small-1 medium-4 columns">
+                    <img class="thumbnail" src="img/molecular-1.jpg" alt="Photo of Uranus.">
+                  </div>
+                  <div class="small-1 medium-4 columns">
+                    <img class="thumbnail" src="img/molecular-4.jpg" alt="Photo of Neptune.">
+                  </div>
+                  <div class="small-1 medium-4 columns">
+                    <img class="thumbnail" src="img/molecular-2.jpg" alt="Photo of Pluto.">
+                  </div>
+                </div>
+                <div class="row miniaturas">
+                  <div class="small-1 medium-4 columns">
+                    <img class="thumbnail" src="img/molecular-3.jpg" alt="Photo of Uranus.">
+                  </div>
+                  <div class="small-1 medium-4 columns">
+                    <img class="thumbnail" src="img/molecular-5.jpg" alt="Photo of Neptune.">
+                  </div>
+                  <div class="small-1 medium-4 columns">
+                    <img class="thumbnail" src="img/molecular-1.jpg" alt="Photo of Pluto.">
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+            
+            <div class="column small-8 medium-8 large-8 right-section">
+              <div class="callout right-secondary-section">
+                <div class="media-object">
+                  <div class="media-object-section">
+                    <img src= "http://placeimg.com/200/200/people">
+                  </div>
+                  <div class="media-object-section">
+                    <h4>Dreams feel real while we're in them.</h4>
+                    <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+
+
+          </div>
+
+          </div>
+
+        </div>
+
+
       </div>
 
 
