--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <body>
     <div class="grid-container">
       <div class="row principal">
-        <div class="column small-4 medium-4 large-4">
-          <div class="logo text-right">
-            <h2>Gastronomía</h2>
-            <p>El amor entra por la barriga</p>
+        <div class="column small-12 medium-12 large-12">
+          <div class="row">
+            <div class="column small-4 medium-4">
+              <div class="logo text-center">
+                <h2>Gastronomía</h2>
+                <p><em>El amor entra por la barriga</em></p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="column small-8 medium-8 large-8 right-section">
-
+          <hr>
         </div>
 
           <div class="row">
@@ -34,69 +36,146 @@
                 </div>
 
                   <ul class="menu vertical">
-                      <li><a class="button expanded" href="#0">INICIO</a></li>
-                      <li><a class="button expanded" href="#0">MI PLATO PERFECTO</a></li>
-                      <li><a class="button expanded" href="#0">RECETAS</a></li>
-                      <li><a class="button expanded" href="#0">FAVORITOS</a></li>
+                      <li><a class="button expanded" href="#0"><b>INICIO</b></a></li>
+                      <li><a class="button expanded" href="#0"><b>MI PLATO PERFECTO</b></a></li>
+                      <li><a class="button expanded" href="#0"><b>RECETAS</b></a></li>
+                      <li><a class="button expanded" href="#0"><b>FAVORITOS</b></a></li>
                   </ul>
 
+                  <div class="row favoritos">
+                    <div class="column small-12 medium-12 large-12">
+                      <h5>Favoritos</h5>
+                      <div class="row miniaturas">
+                        <div class="small-12 medium-4 columns">
+                          <img class="thumbnail" src="img/molecular-1.jpg" alt="Photo of Uranus.">
+                        </div>
+                        <div class="small-12 medium-4 columns">
+                          <img class="thumbnail" src="img/molecular-4.jpg" alt="Photo of Neptune.">
+                        </div>
+                        <div class="small-12 medium-4 columns">
+                          <img class="thumbnail" src="img/molecular-2.jpg" alt="Photo of Pluto.">
+                        </div>
+                      </div>
+                      <div class="row miniaturas">
+                        <div class="small-12 medium-4 columns">
+                          <img class="thumbnail" src="img/molecular-3.jpg" alt="Photo of Uranus.">
+                        </div>
+                        <div class="small-12 medium-4 columns">
+                          <img class="thumbnail" src="img/molecular-5.jpg" alt="Photo of Neptune.">
+                        </div>
+                        <div class="small-12 medium-4 columns">
+                          <img class="thumbnail" src="img/molecular-1.jpg" alt="Photo of Pluto.">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-                <div class="row miniaturas">
-                  <div class="small-1 medium-4 columns">
-                    <img class="thumbnail" src="img/molecular-1.jpg" alt="Photo of Uranus.">
+                  <div class="row historial">
+                    <div class="column small-6 medium-12 large-12">
+                      <h5>Historial</h5>
+                      <ul>
+                        <li><a href="#">Batidos Detox</a></li>
+                        <li><a href="#">Batidos Detox</a></li>
+                        <li><a href="#">Batidos Detox</a></li>
+                        <li><a href="#">Batidos Detox</a></li>
+                        <li><a href="#">Batidos Detox</a></li>
+                        <li><a href="#">Batidos Detox</a></li>
+                        <li><a href="#">Batidos Detox</a></li>
+                      </ul>
+                    </div>
                   </div>
-                  <div class="small-1 medium-4 columns">
-                    <img class="thumbnail" src="img/molecular-4.jpg" alt="Photo of Neptune.">
-                  </div>
-                  <div class="small-1 medium-4 columns">
-                    <img class="thumbnail" src="img/molecular-2.jpg" alt="Photo of Pluto.">
-                  </div>
-                </div>
-                <div class="row miniaturas">
-                  <div class="small-1 medium-4 columns">
-                    <img class="thumbnail" src="img/molecular-3.jpg" alt="Photo of Uranus.">
-                  </div>
-                  <div class="small-1 medium-4 columns">
-                    <img class="thumbnail" src="img/molecular-5.jpg" alt="Photo of Neptune.">
-                  </div>
-                  <div class="small-1 medium-4 columns">
-                    <img class="thumbnail" src="img/molecular-1.jpg" alt="Photo of Pluto.">
-                  </div>
-                </div>
 
               </div>
-
-            </div>
-            
-            <div class="column small-8 medium-8 large-8 right-section">
-              <div class="callout right-secondary-section">
-                <div class="media-object">
-                  <div class="media-object-section">
-                    <img src= "http://placeimg.com/200/200/people">
-                  </div>
-                  <div class="media-object-section">
-                    <h4>Dreams feel real while we're in them.</h4>
-                    <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
-                  </div>
-                </div>
-              </div>
-
-
             </div>
 
+            <div class="column small-8 medium-8 large-8">
+              <div class="callout right-section">
 
+                  <div class="media-object">
+                    <div class="media-object-section">
+                      <h4>Huerto Molecular.</h4>
+                      <p><em>martes 4 de Julio 2017.</em></p>
+                    </div>
+                  </div>
+                  <div class="small-12 medium-12 columns">
+                    <img class="thumbnail" src="img/molecular-1.jpg" class="img-entradas">
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <hr>
+                  <div class="input-group">
+                    <span class="input-group-label"><i class="fi-torso"></i></span>
+                    <input class="input-group-field" type="icon">
+                    <div class="input-group-button">
+                      <input type="submit" class="button" value="Submit">
+                    </div>
+                  </div>
+
+                  <div class="media-object">
+                    <div class="media-object-section middle">
+                      <div class="thumbnail">
+                        <img src="img/snoop_xs.png">
+                      </div>
+                    </div>
+                    <div class="media-object-section">
+                      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                  </div>
+                  <div class="media-object">
+                    <div class="media-object-section middle">
+                      <div class="thumbnail">
+                        <img src="img/snoop_xs.png">
+                      </div>
+                    </div>
+                    <div class="media-object-section">
+                      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                  </div>
+                  <div class="media-object">
+                    <div class="media-object-section middle">
+                      <div class="thumbnail">
+                        <img src="img/snoop_xs.png">
+                      </div>
+                    </div>
+                    <div class="media-object-section">
+                      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                  </div>
+
+                  <div class="media-object">
+                    <div class="media-object-section">
+                      <h4>Pasta Artesanal.</h4>
+                      <p><em>martes 4 de Julio 2017.</em></p>
+                    </div>
+                  </div>
+                  <div class="small-12 medium-12 columns">
+                    <img class="thumbnail" src="img/molecular-3.jpg" class="img-entradas">
+                  </div>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <hr>
+                  <div class="input-group">
+                    <span class="input-group-label"><i class="fi-torso"></i></span>
+                    <input class="input-group-field" type="icon">
+                    <div class="input-group-button">
+                      <input type="submit" class="button" value="Submit">
+                    </div>
+                  </div>
+
+                  <div class="media-object">
+                    <div class="media-object-section middle">
+                      <div class="thumbnail">
+                        <img src="img/snoop_xs.png">
+                      </div>
+                    </div>
+                    <div class="media-object-section">
+                      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                  </div>
+
+            </div>
+           </div>
           </div>
-
-          </div>
-
+         </div>
         </div>
-
-
-      </div>
-
-
-
-    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
